# codeRobot

./: PositionControl.py  README.md  manchon.dae  roue.dae
mockup_pck/: CMakeLists.txt  package.xml
mockup_pck/src/: mockup.cpp  mockup.py
osmose_description/: CMakeLists.txt  PositionControl.py  package.xml
osmose_description/cfg/: PositionControl.cfg
osmose_description/config/: pos_pid_control.yaml
osmose_description/launch/: differential_drive.launch  osmose_description.launch  test_position.launch
osmose_description/meshes/: Wheels.stl  osmose.STL  osmose.dae  terrain2020.STL
osmose_description/msg/: SetTraj.msg
osmose_description/rviz/: osmose_base_config.rviz
osmose_description/src/: PIDRegulator.py  PositionControl.py  asser_simu.py  diff_tf.py  pid_velocity.py  twist_to_motors.py  virtual_joystick.py  wheel_loopback.py  wheel_scaler.py
osmose_description/urdf/: base.urdf  lidar.urdf  saved wheels  sensors.urdf
osmose_gazebo_worlds/: CMakeLists.txt  package.xml
osmose_gazebo_worlds/launch/: world_osmose.launch
osmose_gazebo_worlds/models/manchon_bleu/: manchon_bleu.dae  model.config  model.sdf
osmose_gazebo_worlds/models/manchon_jaune/: manchon_jaune.dae  model.config  model.sdf
osmose_gazebo_worlds/models/roue/: model.config  model.sdf  roue.dae
osmose_gazebo_worlds/models/terrain2020/: manchon_jaune.dae  model.config  model.sdf  terrain2020.dae
osmose_gazebo_worlds/models/terrain2021/: model.config  model.sdf  terrain2021.dae
osmose_gazebo_worlds/worlds/: terrain2020.world
